--- a/src/main/webapp/styles/style.css
+++ b/src/main/webapp/styles/style.css
@@ -10,11 +10,17 @@ body {
 	padding: 3%;
 	background-color: #f0f0f0;
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+	position: relative;
+}
+
+form {
+	margin: 2%;
+	font-size: 1.2em;
 }
 
 h1 {
 	font-size: 2.3em;
-	text-align:center;
+	text-align: center;
 	color: rgb(0, 0, 64);
 	margin-bottom: 4%;
 }
@@ -32,30 +38,57 @@ a {
 
 /* Estilos para la tabla */
 table {
-  width: 100%;
-  border-collapse: collapse;
-  margin-bottom: 20px;
+	width: 100%;
+	border-collapse: collapse;
+	margin-bottom: 20px;
 }
 
 /*encabezado */
 table th {
-  background-color: #333;
-  color: #fff;
-  text-align: left;
-  padding: 10px;
+	background-color: #333;
+	color: #fff;
+	text-align: left;
+	padding: 10px;
 }
 
 /*celdas de datos */
 table td {
-  border: 1px solid #ccc;
-  padding: 10px;
+	border: 1px solid #ccc;
+	padding: 10px;
 }
 
 /* ilas alternas (efecto de zebra) */
 table tr:nth-child(even) {
-  background-color: #f2f2f2;
+	background-color: #f2f2f2;
 }
 
-#divBuscarEmp{
-	margin: 2%;
+#menu {
+	text-align: center;
+}
+
+#divBuscarEmp {
+	margin: 2% 0%;
+}
+
+#divVerSalario {
+	margin: 2% 0%;
+	font-size: 1.4em;
+}
+
+
+input[type="text"] {
+	width: 20%;
+	padding: 10px;
+	border: 1px solid #ccc;
+	border-radius: 5px;
+}
+
+
+input[type="submit"] {
+	background-color: #3498db;
+	color: white;
+	border: none;
+	border-radius: 5px;
+	padding: 10px 20px;
+	cursor: pointer;
 }
