9 commit - sigo con el modificar, falta editar

--- a/src/main/webapp/styles/style.css
+++ b/src/main/webapp/styles/style.css
@@ -97,3 +97,10 @@ input[type="submit"] {
 	width: 35%;
 	height: 35%;
 }
+.containerVerEmp{
+	margin: 2% 5%;
+	padding: 3%;
+	background-color: rgb(255, 0, 0);
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+	position: relative;
+}
